Se creó con Colab

--- a/Cars_price_prediction_regresion_lineal.ipynb
+++ b/Cars_price_prediction_regresion_lineal.ipynb
@@ -19,6 +19,7 @@
       "source": [
         "\n",
         "Juan Sebastian Cortes Chia-95032\n",
+        "Jhonatan Rios Tapiero-95520\n",
         "Busqueda Mazda 3\n",
         "\n"
       ]
